@@ -1,3 +1,5 @@
+* Add payable payment creation through batch
+
 Version 1.3 - 2015-01-22
 * Add reject fee invoices
 * Allow to easily get the xml sepa message
